Fix uneven squishing of table columns

--- a/src/css/TableView.css
+++ b/src/css/TableView.css
@@ -8,13 +8,12 @@
 .table-header {
   display: flex;
   justify-content: center;
-  min-width: 670px;
   text-align: right;
   font-size: 16px;
   font-weight: 500;
   align-items: flex-end;
   line-height: 1.5;
-  margin-bottom: 12px;
+  margin: 0 20px 12px;
 }
 
 .table-view .Collapsible {
